Updated code with SonarQube recommendations